--- a/views/benefits/cerb-en.njk
+++ b/views/benefits/cerb-en.njk
@@ -1,31 +1,30 @@
-<div class="p-5 benefit" data-cy="cerb-benefit">
+{% extends "benefit-template.njk" %}
 
-  <h3 class="benefit__header" id="cerb">
-    {{__("cerb.header")}}
-  </h3>
+{% set sectionId = 'cerb' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("$500 per week") }}
-      {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
-      {{ benefitLi("First payment within 10 days of applying") }}
-    </ul>
+{% block header %}
+  {{__("cerb.header")}}
+{% endblock %}
 
-    <div class="benefit__body">
+{% block featured_list_items %}
+  {{ benefitLi("$500 per week") }}
+  {{ benefitLi("Up to 16 weeks", "if you keep  meeting the eligibility criteria") }}
+  {{ benefitLi("First payment within 10 days of applying") }}
+{% endblock %}
 
-    <strong>Next steps:</strong>
-      <ul>
-        <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
-        <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully.</li>
-        <li>You’ll need to pay income tax on these payments in the future.</li>
-      </ul>
+{% block body %}
+  <strong>Next steps:</strong>
+  <ul>
+    <li>You’ll be asked some questions to direct you to apply through either the Canada Revenue Agency (CRA) or Service Canada.</li>
+    <li>The application will ask you to declare that you meet the eligibility criteria, so read the details carefully.</li>
+    <li>You’ll need to pay income tax on these payments in the future.</li>
+  </ul>
+{% endblock %}
 
-    </div>
-
-    {{ infoLink(
-          "cerb",
-          "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
-          "Find out where to apply"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink(
+      "cerb",
+      "https://www.canada.ca/en/services/benefits/ei/cerb-application.html",
+      "Find out where to apply"
+  )}}
+{% endblock %}
