--- a/views/benefits/cerb-fr.njk
+++ b/views/benefits/cerb-fr.njk
@@ -1,31 +1,30 @@
-<div class="benefit" data-cy="cerb-benefit">
+{% extends "benefit-template.njk" %}
 
-  <h3 class="benefit__header" id="cerb">
-    {{__("cerb.header")}}
-  </h3>
+{% set sectionId = 'cerb' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("500 $ par semaine") }}
-      {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
-      {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
-    </ul>
+{% block header %}
+  {{__("cerb.header")}}
+{% endblock %}
 
-    <div class="benefit__body">
+{% block featured_list_items %}
+  {{ benefitLi("500 $ par semaine") }}
+  {{ benefitLi("Jusqu’à 16 semaines", "tant que vous répondez aux critères d’admissibilité") }}
+  {{ benefitLi("À recevoir au plus tard 10 jours après la demande") }}
+{% endblock %}
 
-      <strong>Prochaines étapes :</strong>
-      <ul>
-        <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
-        <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
-        <li>Ces montants sont imposables.</li>
-      </ul>
+{% block body %}
+  <strong>Prochaines étapes :</strong>
+  <ul>
+    <li>Vous devrez répondre à quelques questions afin de déterminer si vous devez présenter la demande auprès de l’agence du revenu du Canada (ARC) ou Services Canada.</li>
+    <li>L’application vous demandera de confirmer que vous répondez aux critères d’admissibilité. Lisez attentivement les détails.</li>
+    <li>Ces montants sont imposables.</li>
+  </ul>
+{% endblock %}
 
-    </div>
-
-    {{ infoLink(
-          "cerb",
-          "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
-          "Découvrez comment appliquer"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink(
+      "cerb",
+      "https://www.canada.ca/fr/services/prestations/ae/pcusc-application.html",
+      "Découvrez comment appliquer"
+  )}}
+{% endblock %}
