--- a/views/benefits/cssg-en.njk
+++ b/views/benefits/cssg-en.njk
@@ -1,27 +1,27 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-  <h3 class="benefit__header" id="cssg">
-    {{__("cssg.header")}}
-  </h3>
+{% set sectionId = 'cssg' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("Up to $5,000 towards school in the fall") }}
-    </ul>
+{% block header %}
+  {{__("cssg.header") }}
+{% endblock %}
 
-    <div class="benefit__body">
-      <strong>Good to know:</strong>
-      <ul>
-        <li>The government has proposed changes to laws to deliver this new Canada Student Service Grant. That means it has to go to Parliament, which will take time and could change the proposed details.</li>
-        <li>We’ll update this information once the details are known.</li>
-      </ul>
+{% block featured_list_items %}
+  {{ benefitLi("Up to $5,000 towards school in the fall") }}
+{% endblock %}
 
-    </div>
+{% block body %}
+  <strong>Good to know:</strong>
+  <ul>
+    <li>The government has proposed changes to laws to deliver this new Canada Student Service Grant. That means it has to go to Parliament, which will take time and could change the proposed details.</li>
+    <li>We’ll update this information once the details are known.</li>
+  </ul>
+{% endblock %}
 
-    {{ infoLink(
-          "cssg",
-          "https://pm.gc.ca/en/news/news-releases/2020/04/22/support-students-and-new-grads-affected-covid-19",
-          "Read the news release about help for students"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink(
+    "cssg",
+    "https://pm.gc.ca/en/news/news-releases/2020/04/22/support-students-and-new-grads-affected-covid-19",
+    "Read the news release about help for students"
+  )}}
+{% endblock %}
