--- a/views/benefits/ei_workshare-en.njk
+++ b/views/benefits/ei_workshare-en.njk
@@ -1,34 +1,33 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-  <h3 class="benefit__header" id="ei_workshare">
-    {{__("ei_workshare.header")}}
-  </h3>
+{% set sectionId = 'ei_workshare' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("Receive EI benefits") }}
-      {{ benefitLi("Up to 76 weeks") }}
-    </ul>
+{% block header %}
+  {{__("ei_workshare.header")}}
+{% endblock %}
 
-    <div class="benefit__body">
+{% block featured_list_items %}
+  {{ benefitLi("Receive EI benefits") }}
+  {{ benefitLi("Up to 76 weeks") }}
+{% endblock %}
 
-      <strong>The benefit can help if:</strong>
-      <ul>
-        <li>Your hours have been reduced by 10 to 60% because of COVID-19.</li>
-      </ul>
+{% block body %}
+  <strong>The benefit can help if:</strong>
+  <ul>
+    <li>Your hours have been reduced by 10 to 60% because of COVID-19.</li>
+  </ul>
 
-      <strong>To do this:</strong>
-      <ul>
-        <li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li>
-        <li>All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li>
-      </ul>
+  <strong>To do this:</strong>
+  <ul>
+    <li>You would enter into an agreement with your employer and other coworkers who do the exact same work as you.</li>
+    <li>All employees who do the same work need to agree to share the work equally, and your employer has to agree as well. </li>
+  </ul>
+{% endblock %}
 
-    </div>
-
-    {{ infoLink(
-          "ei_workshare",
-          "https://www.canada.ca/en/employment-social-development/corporate/notices/coronavirus.html#h4.02",
-          "Learn more about EI Work-Sharing"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink(
+    "ei_workshare",
+    "https://www.canada.ca/en/employment-social-development/corporate/notices/coronavirus.html#h4.02",
+    "Learn more about EI Work-Sharing"
+  )}}
+{% endblock %}
