--- a/views/benefits/gst_credit-fr.njk
+++ b/views/benefits/gst_credit-fr.njk
@@ -1,29 +1,28 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-  <h3 class="benefit__header" id="gst_credit">
-    {{ __("gst_credit.header") }}
-  </h3>
+{% set sectionId = 'gst_credit' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS") }}
-      {{ benefitLi("En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples") }}
-      {{ benefitLi("Le montant du crédit dépend de votre revenu pour l’année imposable 2018") }}
-    </ul>
+{% block header %}
+  {{ __("gst_credit.header") }}
+{% endblock %}
 
-    <div class="benefit__body">
+{% block featured_list_items %}
+  {{ benefitLi("Versement automatique au mois d’avril si vous recevez déjà le crédit pour la TPS") }}
+  {{ benefitLi("En moyenne :<br> 400 $ pour les célibataires<br>600 $ pour les couples") }}
+  {{ benefitLi("Le montant du crédit dépend de votre revenu pour l’année imposable 2018") }}
+{% endblock %}
 
-      <strong>Bon à savoir :</strong>
-      <ul>
-        <li>Vous n’avez pas à faire la demande pour recevoir ce montant. À compter du 9 avril, il sera envoyé automatiquement si vous recevez déjà le crédit pour la TPS.</li>
-        <li>Vérifiez votre compte bancaire ou votre courrier pour voir si vous avez  recu le crédit pour la TPS.</li>
-      </ul>
+{% block body %}
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>Vous n’avez pas à faire la demande pour recevoir ce montant. À compter du 9 avril, il sera envoyé automatiquement si vous recevez déjà le crédit pour la TPS.</li>
+    <li>Vérifiez votre compte bancaire ou votre courrier pour voir si vous avez  recu le crédit pour la TPS.</li>
+  </ul>
+{% endblock %}
 
-    </div>
-
-    {{ infoLink("gst_credit",
-          "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/ctpstvh-augmentation-covid-19.html",
-          "En savoir plus à propos du crédit pour la TPS"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink("gst_credit",
+    "https://www.canada.ca/fr/agence-revenu/services/prestations-enfants-familles/ctpstvh-augmentation-covid-19.html",
+    "En savoir plus à propos du crédit pour la TPS"
+  )}}
+{% endblock %}
