--- a/views/benefits/mortgage_deferral-fr.njk
+++ b/views/benefits/mortgage_deferral-fr.njk
@@ -1,29 +1,28 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-  <h3 class="benefit__header" id="mortgage_deferral">
-    {{__("mortgage_deferral.header")}}
-  </h3>
+{% set sectionId = 'mortgage_deferral' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau") }}
-    </ul>
+{% block header %}
+  {{__("mortgage_deferral.header")}}
+{% endblock %}
 
-    <div class="benefit__body">
+{% block featured_list_items %}
+  {{ benefitLi("Interrompez vos paiements hypothécaires jusqu’à ce que vous puissiez les payer à nouveau") }}
+{% endblock %}
 
-      <strong>Bon à savoir :</strong>
-      <ul>
-        <li>La banque chargera quand même de l’intérêt.</li>
-        <li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li>
-        <li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque.</li>
-      </ul>
+{% block body %}
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>La banque chargera quand même de l’intérêt.</li>
+    <li> Lorsque vous pourrez effectuer vos paiements à nouveau, vous devrez payer l’intérêt encouru depuis le sursis en plus de vos paiements réguliers.</li>
+    <li> Vous pouvez aussi parler à votre banque à propos de plans de paiements spéciaux afin de ré-amortir votre hypothèque.</li>
+  </ul>
+{% endblock %}
 
-    </div>
-
-    {{ infoLink(
-          "mortgage_deferral",
-          "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
-          "En savoir plus à propos du soutien hypothécaire"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink(
+    "mortgage_deferral",
+    "https://cba.ca/mortgage-deferral-to-help-canadians-experiencing-financial-hardship-due-to-covid-19?l=fr",
+    "En savoir plus à propos du soutien hypothécaire"
+  )}}
+{% endblock %}
