--- a/views/benefits/province-nb-fr.njk
+++ b/views/benefits/province-nb-fr.njk
@@ -1,18 +1,19 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="province-nb">
-    {{__("province-nb.header")}}
-  </h3>
+{% set sectionId = 'province-nb' %}
 
-  <div class="benefit__body">
+{% block header %}
+  {{__("province-nb.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-nb",
-        "https://www2.gnb.ca/content/gnb/fr/corporate/promo/covid-19.html",
-        "En savoir plus à propos du plan du Nouveau-Brunswick"
-    )}}
-</div>
+    "province-nb",
+    "https://www2.gnb.ca/content/gnb/fr/corporate/promo/covid-19.html",
+    "En savoir plus à propos du plan du Nouveau-Brunswick"
+  )}}
+{% endblock %}
