--- a/views/benefits/province-nt-en.njk
+++ b/views/benefits/province-nt-en.njk
@@ -1,18 +1,19 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="province-nt">
-    {{__("province-nt.header")}}
-  </h3>
+{% set sectionId = 'province-nt' %}
 
-  <div class="benefit__body">
+{% block header %}
+  {{__("province-nt.header")}}
+{% endblock %}
 
-    <p>Some provincial and territorial governments are offering additional support for people during COVID-19.</p>
+{% block body %}
+  <p>Some provincial and territorial governments are offering additional support for people during COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-nt",
-        "https://www.gov.nt.ca/covid-19/en/services/financial-support",
-        "Learn more about Northwest Territories benefits"
-    )}}
-</div>
+    "province-nt",
+    "https://www.gov.nt.ca/covid-19/en/services/financial-support",
+    "Learn more about Northwest Territories benefits"
+  )}}
+{% endblock %}
