--- a/views/benefits/province-nt-fr.njk
+++ b/views/benefits/province-nt-fr.njk
@@ -1,18 +1,19 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="province-nt">
-    {{__("province-nt.header")}}
-  </h3>
+{% set sectionId = 'province-nt' %}
 
-  <div class="benefit__body">
+{% block header %}
+  {{__("province-nt.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux et territoriaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux et territoriaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-nt",
-        "https://www.gov.nt.ca/covid-19/fr/services/soutien-financier",
-        "En savoir plus à propos des prestations des Territoires du Nord-Ouest"
-    )}}
-</div>
+    "province-nt",
+    "https://www.gov.nt.ca/covid-19/fr/services/soutien-financier",
+    "En savoir plus à propos des prestations des Territoires du Nord-Ouest"
+  )}}
+{% endblock %}
