--- a/views/benefits/province-nu-fr.njk
+++ b/views/benefits/province-nu-fr.njk
@@ -1,18 +1,19 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="province-nu">
-    {{__("province-nu.header")}}
-  </h3>
+{% set sectionId = 'province-nu' %}
 
-  <div class="benefit__body">
+{% block header %}
+  {{__("province-nu.header")}}
+{% endblock %}
 
+{% block body %}
     <p>Certains gouvernements provinciaux et territoriaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-nu",
-        "https://www.gov.nu.ca/fr/sante/information/covid-19-nouveau-coronavirus",
-        "En savoir plus à propos du plan du Nunavut"
-    )}}
-</div>
+    "province-nu",
+    "https://www.gov.nu.ca/fr/sante/information/covid-19-nouveau-coronavirus",
+    "En savoir plus à propos du plan du Nunavut"
+  )}}
+{% endblock %}
