--- a/views/benefits/province-pe-fr.njk
+++ b/views/benefits/province-pe-fr.njk
@@ -1,18 +1,19 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="province-pe">
-    {{__("province-pe.header")}}
-  </h3>
+{% set sectionId = 'province-pe' %}
 
-  <div class="benefit__body">
+{% block header %}
+  {{__("province-pe.header")}}
+{% endblock %}
 
-    <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% block body %}
+  <p>Certains gouvernements provinciaux offrent des programmes d’aide financière additionnels pendant la COVID-19.</p>
+{% endblock %}
 
-  </div>
-
+{% block info_link %}
   {{ infoLink(
-        "province-pe",
-        "https://www.princeedwardisland.ca/fr/sujet/covid-19-soutien-et-services",
-        "En savoir plus à propos des prestations de l’Î.-P.-É."
-    )}}
-</div>
+    "province-pe",
+    "https://www.princeedwardisland.ca/fr/sujet/covid-19-soutien-et-services",
+    "En savoir plus à propos des prestations de l’Î.-P.-É."
+  )}}
+{% endblock %}
