--- a/views/benefits/rent_help-en.njk
+++ b/views/benefits/rent_help-en.njk
@@ -1,21 +1,22 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="rent_help">
-    {{__("rent_help.header")}}
-  </h3>
+{% set sectionId = 'rent_help' %}
 
-  <div class="benefit__main">
-    <div class="benefit__body">
-      <ul>
-        <li>Provincial governments are in charge of rental housing rules.</li>
-        <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
-      </ul>
-    </div>
+{% block header %}
+  {{__("rent_help.header")}}
+{% endblock %}
 
-    {{ infoLink(
-          "rent_help",
-          "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
-          "Check with your provincial government for more details"
-      )}}
-  </div>
-</div>
+{% block body %}
+  <ul>
+    <li>Provincial governments are in charge of rental housing rules.</li>
+    <li> In most provinces and territories, you cannot be evicted for not paying rent.</li>
+  </ul>
+{% endblock %}
+
+{% block info_link %}
+  {{ infoLink(
+    "rent_help",
+    "https://www.cmhc-schl.gc.ca/en/rental-housing/covid-19-eviction-bans-and-suspensions-to-support-renters",
+    "Check with your provincial government for more details"
+  )}}
+{% endblock %}
