--- a/views/benefits/student_loan-fr.njk
+++ b/views/benefits/student_loan-fr.njk
@@ -1,30 +1,29 @@
-<div class="benefit">
+{% extends "benefit-template.njk" %}
 
-   <h3 class="benefit__header" id="student_loan">
-    {{__("student_loan.header")}}
-  </h3>
+{% set sectionId = 'student_loan' %}
 
-  <div class="benefit__main">
-    <ul class="benefit__featured_list">
-      {{ benefitLi("Les paiements sont automatiquement suspendus") }}
-      {{ benefitLi("Du 30 mars 2020 jusqu’au 30 septembre 2020") }}
-    </ul>
+{% block header %}
+  {{__("student_loan.header")}}
+{% endblock %}
 
-    <div class="benefit__body">
+{% block featured_list_items %}
+  {{ benefitLi("Les paiements sont automatiquement suspendus") }}
+  {{ benefitLi("Du 30 mars 2020 jusqu’au 30 septembre 2020") }}
+{% endblock %}
 
-      <strong>Bon à savoir :</strong>
-      <ul>
-        <li>Vous n’avez pas à faire de demande afin de suspendre vos paiements.</li>
-        <li> Les paiements pré-autorisés sont suspendus.</li>
-        <li> Consultez vous à votre compte au <a href='https://www.csnpe-nslsc.canada.ca/fr/Accueil' target='_blank'>Centre de service national de prêts aux étudiants</a> pour plus de détails.</li>
-      </ul>
+{% block body %}
+  <strong>Bon à savoir :</strong>
+  <ul>
+    <li>Vous n’avez pas à faire de demande afin de suspendre vos paiements.</li>
+    <li> Les paiements pré-autorisés sont suspendus.</li>
+    <li> Consultez vous à votre compte au <a href='https://www.csnpe-nslsc.canada.ca/fr/Accueil' target='_blank'>Centre de service national de prêts aux étudiants</a> pour plus de détails.</li>
+  </ul>
+{% endblock %}
 
-    </div>
-
-    {{ infoLink(
-          "student_loan",
-          "https://www.csnpe-nslsc.canada.ca/fr/Accueil",
-          "En savoir plus à propos de l’aide disponible pour votre dette d’étude"
-      )}}
-  </div>
-</div>
+{% block info_link %}
+  {{ infoLink(
+    "student_loan",
+    "https://www.csnpe-nslsc.canada.ca/fr/Accueil",
+    "En savoir plus à propos de l’aide disponible pour votre dette d’étude"
+  )}}
+{% endblock %}
