use a template for benefit cards

--- a/views/benefit-template.njk
+++ b/views/benefit-template.njk
@@ -1,4 +1,4 @@
-<details class="benefit">
+<details class="benefit" open>
   <summary class="benefit__header" id="{{ sectionId }}">
     <h3>
       {% block header %}{% endblock %}
