bust some cache

--- a/views/base.njk
+++ b/views/base.njk
@@ -22,7 +22,7 @@
         <link rel="shortcut icon" href="{{ asset('/favicon.png') }}" type="image/x-icon" sizes="32x32">
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="">
         <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Noto+Sans:400,700&amp;display=fallback" rel="stylesheet">
-        <link rel="stylesheet" href="{{ asset('/dist/css/styles.css') }}">
+        <link rel="stylesheet" href="{{ asset('/dist/css/styles.css') }}?123">
         {% include "_includes/meta.njk" %}
         {% include "_includes/ga.njk" %}
     </head>
@@ -71,7 +71,7 @@
                 {%- endfor -%}
             {%- endif -%}
 
-            <script type="text/javascript" src={{ asset('/dist/js/app.js') }}></script>
+            <script type="text/javascript" src="{{ asset('/dist/js/app.js') }}?123"></script>
         {%- endblock -%}
     </body>
 </html>
